# rust-learning

./: Cargo.toml  README.md
.cargo/: config.toml  rust-lld
lessons/01-foundation/: Cargo.toml  README.md
lessons/01-foundation/src/: main.rs
lessons/02-ownership-borrowing/: Cargo.toml  README.md
lessons/02-ownership-borrowing/src/: main.rs
lessons/03-struct-enum-pattern/: Cargo.toml  README.md
lessons/03-struct-enum-pattern/src/: main.rs
lessons/04-collections-iterators/: Cargo.toml  README.md
lessons/04-collections-iterators/src/: main.rs
lessons/05-errors-modules/: Cargo.toml  README.md
lessons/05-errors-modules/src/: config.rs  main.rs
lessons/06-traits-generics-lifetimes/: Cargo.toml  README.md
lessons/06-traits-generics-lifetimes/src/: main.rs
lessons/07-concurrency/: Cargo.toml  README.md
lessons/07-concurrency/src/: main.rs
lessons/08-architecture-capstone/: Cargo.toml  README.md
lessons/08-architecture-capstone/src/: main.rs
scripts/: check-all.sh  run-lesson.sh
