[workspace]
resolver = "2"
members = [
    "lessons/01-foundation",
    "lessons/02-ownership-borrowing",
    "lessons/03-struct-enum-pattern",
    "lessons/04-collections-iterators",
    "lessons/05-errors-modules",
    "lessons/06-traits-generics-lifetimes",
    "lessons/07-concurrency",
    "lessons/08-architecture-capstone",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["dk <dkplus.js@gmail.com>"]
license = "MIT"
